--- a/docs/RUST0005.md
+++ b/docs/RUST0005.md
@@ -1,75 +1,62 @@
-# RUST0005: Prefer StringPool.Get() for PrefabName Comparisons
+# RUST0005: Prefab Name String Pool Validation
 
 ## Problem
 
-Direct string comparisons with `PrefabName` or `ShortPrefabName` can lead to inefficient and potentially inconsistent string handling.
+Direct string comparisons with `BaseNetworkable.PrefabName` or `ShortPrefabName` can lead to runtime errors if the prefab path doesn't exist.
 
 ## Description
 
-In Rust game development, `BaseNetworkable` provides `PrefabName` and `ShortPrefabName` properties. These properties are internally managed by `StringPool.Get()`. Direct string comparisons can bypass the string pooling mechanism, which can lead to:
+When working with Rust plugins, prefab paths must exist in the game's `StringPool`. This analyzer validates prefab paths at compile time by checking:
 
-1. Performance overhead
-2. Potential string comparison inconsistencies
-3. Increased memory usage
+1. Direct comparisons with `PrefabName`
+2. Comparisons with `ShortPrefabName` (filename without extension)
 
 ## Examples
 
-### Incorrect Implementation ❌
+### Incorrect Code ❌
 
 ```csharp
-if (baseNetworkable.PrefabName == "testName")
-{
-    // This bypasses StringPool.Get()
-}
+// Error: String doesn't exist in StringPool
+if (entity.PrefabName == "assets/prefabs/npc/autotur1ret/autoturret_deployed.prefab")
+
+// Error: Invalid prefab name
+if (entity.ShortPrefabName == "autotur1ret")
 ```
 
-### Correct Implementation ✅
+### Correct Code ✅
 
 ```csharp
-if (baseNetworkable.PrefabName == StringPool.Get("testName"))
-{
-    // Correct string comparison using StringPool
-}
+// Valid prefab path
+if (entity.PrefabName == "assets/prefabs/npc/autoturret/autoturret_deployed.prefab")
+
+// Valid short name
+if (entity.ShortPrefabName == "autoturret")
 ```
 
 ## Why This Matters
 
-- `StringPool.Get()` ensures consistent string references
-- Reduces memory allocations
-- Improves performance by using interned strings
-- Maintains the internal string management of Rust's networking system
+- Prevents runtime errors from invalid prefab paths
+- Catches typos in prefab names during development
+- Ensures consistent prefab path usage
 
 ## How to Fix
 
-1. Use `StringPool.Get()` when comparing prefab names
-2. Prefer `StringPool.Contains()` for checking string existence
-3. Leverage the built-in string pooling mechanism
+1. Check the correct prefab path in the game files
+2. Use exact prefab paths from the game
+3. For `ShortPrefabName`, use the filename without extension
 
 ## Configuration
 
-This rule is enabled by default and will trigger a warning when:
-- Directly comparing `PrefabName` or `ShortPrefabName`
-- Using string literals in comparisons
-
-## Suppressing Warnings
-
-In rare cases, you may need to suppress this warning:
-
-```csharp
-#pragma warning disable RUST0005
-if (baseNetworkable.PrefabName == "testName") // Suppressed warning
-{
-    // Legacy code or specific use case
-}
-#pragma warning restore RUST0005
-```
+This rule is enabled by default and will trigger an error when:
+- Using non-existent prefab paths
+- Using incorrect short names
 
 ## Rule Details
 
 | Property | Value |
 |----------|-------|
-| Category | Performance |
-| Severity | Warning |
+| Category | Correctness |
+| Severity | Error |
 | Enabled | Yes |
 | Code | RUST0005 |
 
